--- a/app/src/main/res/layout/fragment_kebijakan_khusus.xml
+++ b/app/src/main/res/layout/fragment_kebijakan_khusus.xml
@@ -6,14 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="id.rentist.mitrarentist.fragment.HistoryTransFragment">
+    tools:context="id.rentist.mitrarentist.fragment.KebijakanKhususFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/kbjk_recyclerViewFrag"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/xmin_padding">
-    </android.support.v7.widget.RecyclerView>
+        >
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/kbjk_recyclerViewFrag"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/xmin_padding">
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
