--- a/app/src/main/res/layout/activity_form_add_kebijakan.xml
+++ b/app/src/main/res/layout/activity_form_add_kebijakan.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackgound"
-    tools:context="id.rentist.mitrarentist.FormAddKebijakanActivity">
+    tools:context="id.rentist.mitrarentist.FormKebijakanActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
