--- a/app/src/main/res/layout/content_form_add_kebijakan.xml
+++ b/app/src/main/res/layout/content_form_add_kebijakan.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@color/colorGrey"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="id.rentist.mitrarentist.FormAddKebijakanActivity"
+    tools:context="id.rentist.mitrarentist.FormKebijakanActivity"
     tools:showIn="@layout/activity_form_add_kebijakan">
 
     <LinearLayout
