--- a/app/src/main/res/layout/content_driver.xml
+++ b/app/src/main/res/layout/content_driver.xml
@@ -18,9 +18,7 @@
             android:id="@+id/dr_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/xmin_padding"
-            >
-        </android.support.v7.widget.RecyclerView>
+            android:padding="@dimen/min_padding"></android.support.v7.widget.RecyclerView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
