--- a/app/src/main/res/layout/content_form_edit_profil.xml
+++ b/app/src/main/res/layout/content_form_edit_profil.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/xmin_padding"
+    android:padding="@dimen/min_padding"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.FormEditProfilActivity"
     tools:showIn="@layout/activity_form_edit_profil">
@@ -18,8 +18,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusableInTouchMode="true"
             android:orientation="vertical"
-            android:focusableInTouchMode="true">
+            android:padding="@dimen/xmin_padding">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -33,7 +34,7 @@
                     android:layout_width="@dimen/thumb_width"
                     android:layout_height="@dimen/thumb_height"
                     android:layout_weight="1"
-                    app:srcCompat="@android:drawable/sym_def_app_icon" />
+                    app:srcCompat="@drawable/img" />
 
                 <Button
                     android:id="@+id/btnUploadFoto"
@@ -44,51 +45,131 @@
                     android:text="Pilih Foto" />
             </LinearLayout>
 
-            <EditText
-                android:id="@+id/epr_email"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="email"
-                android:inputType="textEmailAddress"
-                android:padding="@dimen/min_padding" />
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:orientation="vertical"
+                android:padding="@dimen/xmin_padding">
 
-            <EditText
-                android:id="@+id/epr_rental_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="nama rental"
-                android:inputType="textPersonName"
-                android:padding="@dimen/min_padding" />
+                <TextView
+                    android:id="@+id/textView36"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Email"
+                    android:textColor="@color/colorBlack" />
 
-            <EditText
-                android:id="@+id/epr_owner_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="nama pemilik"
-                android:inputType="textPersonName"
-                android:padding="@dimen/min_padding" />
+                <EditText
+                    android:id="@+id/epr_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorNearWhite"
+                    android:ems="10"
+                    android:hint="email"
+                    android:inputType="textEmailAddress"
+                    android:padding="@dimen/min_padding" />
+            </LinearLayout>
 
-            <EditText
-                android:id="@+id/epr_telp"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="nomor telepon"
-                android:inputType="phone"
-                android:padding="@dimen/min_padding" />
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:orientation="vertical"
+                android:padding="@dimen/xmin_padding">
 
-            <EditText
-                android:id="@+id/epr_address_name"
+                <TextView
+                    android:id="@+id/textView37"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nama rental"
+                    android:textColor="@color/colorBlack" />
+
+                <EditText
+                    android:id="@+id/epr_rental_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorNearWhite"
+                    android:ems="10"
+                    android:hint="nama rental"
+                    android:inputType="textPersonName"
+                    android:padding="@dimen/min_padding" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="alamat"
-                android:inputType="textMultiLine"
-                android:lines="3"
-                android:padding="@dimen/min_padding" />
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:orientation="vertical"
+                android:padding="@dimen/xmin_padding">
+
+                <TextView
+                    android:id="@+id/textView38"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nama Pemilik"
+                    android:textColor="@color/colorBlack" />
+
+                <EditText
+                    android:id="@+id/epr_owner_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorNearWhite"
+                    android:ems="10"
+                    android:hint="nama pemilik"
+                    android:inputType="textPersonName"
+                    android:padding="@dimen/min_padding" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:orientation="vertical"
+                android:padding="@dimen/xmin_padding">
+
+                <TextView
+                    android:id="@+id/textView39"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="No. Telepon"
+                    android:textColor="@color/colorBlack" />
+
+                <EditText
+                    android:id="@+id/epr_telp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorNearWhite"
+                    android:ems="10"
+                    android:hint="nomor telepon"
+                    android:inputType="phone"
+                    android:padding="@dimen/min_padding" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:orientation="vertical"
+                android:padding="@dimen/xmin_padding">
+
+                <TextView
+                    android:id="@+id/textView40"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Alamat"
+                    android:textColor="@color/colorBlack" />
+
+                <EditText
+                    android:id="@+id/epr_address_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorNearWhite"
+                    android:ems="10"
+                    android:hint="alamat"
+                    android:inputType="textMultiLine"
+                    android:lines="3"
+                    android:padding="@dimen/min_padding" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
