--- a/app/src/main/res/menu/menu_edit_delete_option.xml
+++ b/app/src/main/res/menu/menu_edit_delete_option.xml
@@ -11,4 +11,11 @@
         android:icon="@drawable/ic_edit_white_24dp"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/action_delete"
+        android:orderInCategory="100"
+        android:title="@string/action_search"
+        android:icon="@drawable/ic_delete_white_24dp"
+        app:showAsAction="always" />
+
 </menu>
