--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -22,6 +22,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <RelativeLayout
+        android:id="@+id/forgot_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp">
