--- a/app/src/main/res/menu/activity_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_dashboard_drawer.xml
@@ -18,14 +18,14 @@
             android:id="@+id/nav_driver"
             android:icon="@drawable/ic_person_black_24dp"
             android:title="Pengemudi" />
-        <item
-            android:id="@+id/nav_drop"
-            android:icon="@drawable/ic_assignment_late_black_24dp"
-            android:title="Antar Aset" />
-        <item
-            android:id="@+id/nav_take"
-            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
-            android:title="Jemput Aset" />
+        <!--<item-->
+            <!--android:id="@+id/nav_drop"-->
+            <!--android:icon="@drawable/ic_assignment_late_black_24dp"-->
+            <!--android:title="Antar Aset" />-->
+        <!--<item-->
+            <!--android:id="@+id/nav_take"-->
+            <!--android:icon="@drawable/ic_assignment_turned_in_black_24dp"-->
+            <!--android:title="Jemput Aset" />-->
         <item
             android:id="@+id/nav_dompet"
             android:icon="@drawable/ic_account_balance_wallet_black_24dp"
@@ -43,17 +43,25 @@
             android:icon="@drawable/ic_card_giftcard_black_24dp"
             android:title="Kupon" />
         <item
-            android:id="@+id/nav_pengaturan"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Pengaturan" />
-        <item
             android:id="@+id/nav_kebijakan"
             android:icon="@drawable/ic_book_black_36dp"
             android:title="Kebijakan" />
         <item
             android:id="@+id/nav_pengaduan"
-            android:icon="@drawable/ic_book_black_36dp"
+            android:icon="@drawable/ic_report_black_24dp"
             android:title="Pengaduan" />
+        <item
+            android:id="@+id/nav_critic"
+            android:icon="@drawable/ic_rate_review_black_24dp"
+            android:title="Kritik &amp; Saran" />
+        <!--<item-->
+            <!--android:id="@+id/nav_suggest"-->
+            <!--android:icon="@drawable/ic_rate_review_black_24dp"-->
+            <!--android:title="Saran" />-->
+        <item
+            android:id="@+id/nav_pengaturan"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Pengaturan" />
         <item
             android:id="@+id/nav_panduan"
             android:icon="@drawable/ic_help_black_24dp"
