--- a/app/src/main/res/layout/content_trans_detail.xml
+++ b/app/src/main/res/layout/content_trans_detail.xml
@@ -236,17 +236,24 @@
 
         </ScrollView>
 
-        <Button
-            android:id="@+id/btn_accept"
+        <LinearLayout
+            android:id="@+id/btnContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:background="@color/colorPrimaryDark"
-            android:text="Berhasil diantar"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/medium_text"
-            android:textStyle="bold" />
+            android:layout_centerHorizontal="true">
+
+            <Button
+                android:id="@+id/btnDrop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimaryDark"
+                android:text="Berhasil diantar"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/medium_text"
+                android:textStyle="bold" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
