--- a/app/src/main/res/layout/content_dompet.xml
+++ b/app/src/main/res/layout/content_dompet.xml
@@ -101,8 +101,8 @@
                     android:id="@+id/last_with_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="date"
                     android:gravity="end"
+                    android:text="date"
                     android:textColor="@color/colorGrey" />
 
                 <LinearLayout
@@ -143,8 +143,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/min_padding"
                                 android:layout_toEndOf="@+id/textView17"
-                                android:textColor="@color/colorPrice"
                                 android:text="-"
+                                android:textColor="@color/colorPrice"
                                 android:textSize="@dimen/medium_text" />
 
 
@@ -215,6 +215,17 @@
 
                 </LinearLayout>
 
+                <TextView
+                    android:id="@+id/btn_history_withdrawal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Riwayat Withdrawal>>"
+                    android:clickable="true"
+                    android:gravity="end"
+                    android:layout_marginTop="@dimen/xmin_padding"
+                    android:layout_below="@+id/det_last_withdrawal"
+                    android:textColor="@color/colorPrimary"/>
+
 
             </RelativeLayout>
 
@@ -278,6 +289,15 @@
         <!--</RelativeLayout>-->
 
         <!--</android.support.v7.widget.CardView>-->
+
+        <TextView
+            android:layout_margin="@dimen/xmin_padding"
+            android:id="@+id/note"
+            android:textSize="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/dm_btn_drawal"
+            />
 
         <Button
             android:id="@+id/dm_btn_drawal"
